--- a/src/css/modules/faq.css
+++ b/src/css/modules/faq.css
@@ -56,6 +56,7 @@
 .text-faq {
   font-size: 20px;
   color: #fff;
+  max-width: 94vh;
 }
 
 .question {
